--- a/info.toml
+++ b/info.toml
@@ -547,7 +547,7 @@ path = "exercises/options/options1.rs"
 mode = "test"
 hint = """
 Options can have a Some value, with an inner value, or a None value, without an inner value.
-There's multiple ways to get at the inner value, you can use unwrap, or pattern match. Unwrapping
+There's multiple ways to get at the inner value, you can use unwrap, or pattern . Unwrapping
 is the easiest, but how do you do it safely so that it doesn't panic in your face later?"""
 
 [[exercises]]
